ci: add write permission for gh-pages deploy

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,8 @@ on:
       - "typedoc.json"
       - "tsconfig.json"
       - "package.json"
-
+permissions:
+  contents: write
 jobs:
   docs:
     runs-on: ubuntu-latest
