--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "eject": "react-scripts eject",
     "docs": "typedoc --options typedoc.json",
     "typecheck": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook:build": "build-storybook",
+    "storybook:deploy-spike": "gh-pages -d storybook-static -b gh-pages -d docgen-spike"
   },
   "eslintConfig": {
     "extends": [
