--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./storybook-static
-          destination_dir: docgen-spike
+          publish_branch: storybook-spike-docs
