--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "docs": "typedoc --options typedoc.json",
     "typecheck": "tsc --noEmit",
     "storybook:build": "build-storybook",
-    "storybook:deploy-spike": "gh-pages -d storybook-static -b gh-pages -d docgen-spike"
+    "storybook:deploy-spike": "gh-pages -d storybook-static -b gh-pages -d docgen-spike",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
