--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Build Storybook
         run: npm run build-storybook
 
-      - name: Deploy Storybook (Docgen Spike)
+      - name: Deploy Storybook to custom branch
         if: github.ref == 'refs/heads/docs/react-docgen-spike'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./storybook-static
           publish_branch: storybook-spike-docs
+          publish_dir: ./storybook-static
